...
                                </constraints>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="20"/>
                                <state key="normal" title="Comparer">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Météo" image="weatherIcon" selectedImage="weatherIcon" id="OJJ-L1-rcI"/>
                    <connections>
                        <outlet property="cityLabel" destination="eaY-iC-M4g" id="S6H-Sv-eXV"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="20"/>
                                <state key="normal" title="Traduire">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        </connections>
                    </view>
                    <tabBarItem key="tabBarItem" title="Traducteur" image="translationIcon" selectedImage="translationIcon" id="cXW-ZW-nNw"/>
                    <connections>
                        <outlet property="activityIndicator" destination="Vkm-JM-IYL" id="98B-BG-yj1"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="20"/>
                                <state key="normal" title="Convertir">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Somme" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3aW-0K-DcG">
                                        <rect key="frame" x="0.0" y="37.333333333333336" width="374" height="38.000000000000007"/>
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Résultat" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t27-cu-HBG">
                                        <rect key="frame" x="0.0" y="127.66666666666666" width="374" height="38"/>
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
