...
    //MARK: - View life cycle
    override func viewDidLoad() {
        super.viewDidLoad()
        toggleActivityIndicator(shown: false)
        // creating a placeholder for the frenchtextview
        placeholderLabel = UILabel()
        placeholderLabel.text = "Entrez votre texte ici."
        placeholderLabel.font = UIFont.italicSystemFont(ofSize: (frenchTextView.font?.pointSize)!)
        placeholderLabel.sizeToFit()
        frenchTextView.addSubview(placeholderLabel)
        placeholderLabel.frame.origin = CGPoint(x: 5, y: (frenchTextView.font?.pointSize)! / 2)
        placeholderLabel.textColor = UIColor.lightGray
        placeholderLabel.isHidden = !frenchTextView.text.isEmpty
...
